--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 
   <script src="./main.js"></script>
   <script src="./findArray.js"></script>
+  <script src="./reduce.js"></script>
+  <script src="./big_spelnder.js"></script>
 </body>
 </html>
